TASK: Fix auto-hiding scrollbar in browser not supporting overlay

--- a/DistributionPackages/Neos.DocsNeosIo/Resources/Private/Fusion/Component/Header/Header.scss
+++ b/DistributionPackages/Neos.DocsNeosIo/Resources/Private/Fusion/Component/Header/Header.scss
@@ -90,6 +90,7 @@
 
     // Only show scrollbar on hover
     &:hover {
+	  overflow-y: auto;
       overflow-y: overlay;
 	  -ms-overflow-style: -ms-autohiding-scrollbar;
     }
